# HierarchicalDatacubes

./: .gitignore  Algorithms_Usage_Guide.md  LICENSE  README.md  aurelien-config.json  benchmark.py  install.bat  install.sh  main.py  main_temp.py  nael-config.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python-tests.yml
Assets/: last_comparison.json
Core/: AppUIPyQT.py  benchmark.py  latexMaker.py  main.py
scripts/: explore_faitom3.py  generate_livrables_diagrams.py  generate_multidimensional_space.py  generate_star_schema.py  main2.py  mainExThese.py  pseudoCode.tex  tests.py
scripts/Algorithms/: BUC.py  FastHierarchicalClosetCube.py  HierarchicalBUC.py  HierarchicalClosetCube.py  HierarchicalCompleteCube.py  HierarchicalLevelUpCube.py  HierarchicalStarCubing.py  OptimizedHierarchicalStarCubing.py  bruteForce.py  closetCube.py  starCubing.py
scripts/Livrables/: aurelien_db_C3_R5_diagrammeTikz.tex  buc_tableOM3.tex
scripts/Visualisation/: cubeTikZ.py
scripts/databaseManagement/: Converter.py  DataGenerator.py  TableFaitsExempleThese.db  TikzLatexGenerator.py  UniversalLatexGenerator.py  dbGetter.py  mainDB.py  merge_timings.py  processAlgo.py  timings.json
temp/: banking_flat_C3_R5.db  banking_hierarchical_C3_R5.db  generation.py  medical_flat_C3_R5.db  medical_hierarchical_C3_R5.db
tests/: test_ClosetCube.py  test_FastHierarchicalClosetCube.py  test_HierarchicalBUC.py  test_HierarchicalClosetCube.py  test_HierarchicalStarCubing.py  test_StarCubing.py  test_fast_hierarchical.py
(+55 files in other folders)
