[project]
name = "hierarchical-datacubes"
version = "0.1.0"
description = "Project for analyzing hierarchical datacubes algorithm performance"
authors = [
    { name = "Nael" }
]
dependencies = [
    "tabulate",
    "numpy",
    "PyQt6",
    "matplotlib",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools]
packages = ["scripts", "Core"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
